--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -5,6 +5,12 @@ $red : #D32F2F;
 body {
     background-color: #ddd;
     font-family: 'Poiret One', Segoe UI Light, cursive;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    .fotos{
+        width: 600px;
+    }
 }
 
 #card {
@@ -12,8 +18,9 @@ body {
     top: 100px;
     width: 460px;
     height: 260px;
-    left: 50%;
+    left: 70%;
     margin-left: -230px;
+    z-index: 1;
 }
 
 #card {
@@ -275,5 +282,20 @@ body {
 
     to {
         transform: rotateX(180deg);
+    }
+}
+
+@media (max-width: 600px){
+    #card{
+        position: absolute;
+        top: 50px;
+        width: 460px;
+        height: 260px;
+        left: 35%;
+        margin-left: -230px;
+        z-index: 1;
+    }
+    body{
+        overflow-x: hidden;
     }
 }
